# pre

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
pre/: agent_config.json  rules.md
pre_mcp/: __init__.py  __main__.py  audit.py  master_client.py  rate_limit.py  tools.py
scripts/: _token_lib.py  agent_reply.py  api_server.py  backfill_mcp_caller_id.py  bus_ctl.sh  check_mcp_status.py  check_tmux_version.sh  cleanup_stale_usage_snapshots.py  cron_daemon.py  decide.py  dispatch_inbox.py  download_file.py  gover_view.py  init_project.py  install.sh  install_gover_review.py  install_mcp_registration.py  install_pre_rule.py  pre  pre_init.py  pre_migrate.py  pre_repair.py  pre_teach.py  pre_token.py  pre_tool_use.py  pre_update.py  read_pane.py  runtime_watchdog.py  spawn.rc  spawn_agent.sh  start_master.py  start_node.py  stop_hook.py  swap_mcp_secret_to_default.py  test_cli_codex_local_driver.py  test_stuck_detector_provenance.py  tmux_startup.sh  upload_file.py  usage_probe_once.py  verify_node_integrity.py  (+1 more)
src/: __init__.py  analyzer.py  api.py  cache.py  claude_driver_audit.py  config.py  cycle_alert.py  freerun_allowlist.py  freerun_budget.py  freerun_intervention_loop.py  governor.py  hook.py  logger.py  message.py  notify.py  prehook_evaluator.py  reporter.py  rules.py  ssh_sudo_allowlist.py  task_summarizer.py  tmux_helper.py  transcript_parser.py  user_decisions.py  ws_lib.py
src/master/: auth.py  (+14 more)
tests/: conftest.py  test_cache.py  test_claude_driver_audit.py  test_freerun_allowlist.py  test_freerun_budget.py  test_rate_limit.py  test_rules.py  (+2 more)
(+61 files in other folders)
